feat: add connection string in appsettings

--- a/src/Backend/MyRecipeBook.API/appsettings.Development.json
+++ b/src/Backend/MyRecipeBook.API/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "Connection": "Server=127.0.0.1,1433;Database=LIVRO_DE_RECEITAS;User ID=sa;Password=P@assword77;Encrypt=True;TrustServerCertificate=True;"
   }
 }
