--- a/src/Backend/MyRecipeBook.API/appsettings.Development.json
+++ b/src/Backend/MyRecipeBook.API/appsettings.Development.json
@@ -1,5 +1,10 @@
 {
   "ConnectionStrings": {
     "Connection": "Server=127.0.0.1,1433;Database=LIVRO_DE_RECEITAS;User ID=sa;Password=P@assword77;Encrypt=True;TrustServerCertificate=True;"
+  },
+  "Settings": {
+    "Password": {
+      "AdditionalKey": "wwwwwww"
+    }
   }
 }
