--- a/src/Backend/MyRecipeBook.Application/MyRecipeBook.Application.csproj
+++ b/src/Backend/MyRecipeBook.Application/MyRecipeBook.Application.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0-rc.2.24473.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-rc.2.24473.5" />
   </ItemGroup>
 
   <ItemGroup>
