--- a/src/Backend/MyRecipeBook.API/appsettings.Development.json
+++ b/src/Backend/MyRecipeBook.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Connection": "Server=127.0.0.1,1433;Database=LIVRO_DE_RECEITAS;User ID=sa;Password=P@assword77;Encrypt=True;TrustServerCertificate=True;"
+    "Connection": "Data Source=127.0.0.1,1433;Initial Catalog=LIVRO_DE_RECEITAS;User ID=sa;Password=P@assword77;Encrypt=True;TrustServerCertificate=True;"
   },
   "Settings": {
     "Password": {
