--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -5,8 +5,7 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - '**'
+    types: [opened, synchronize, reopened]
 
 jobs:
   build-and-test:
@@ -44,34 +43,38 @@ jobs:
           name: test-results
           path: ./test-results
 
-  sonarcloud-scan:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-
-    steps:
-      # Checkout do código
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # Download dos resultados dos testes
-      - name: Download test results
-        uses: actions/download-artifact@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          name: test-results
-
-      # Configuração do .NET Core
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
+          java-version: 17
+          distribution: 'zulu' # Alternative distribution options are available.
+      - uses: actions/checkout@v4
         with:
-          dotnet-version: '6.0' # Ajuste para a versão do seu projeto
-
-      # Análise do SonarCloud
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Cache SonarQube Cloud packages
+        uses: actions/cache@v4
         with:
-          args: >
-            -Dsonar.projectKey=andreyaraujo-dev_my-recipe-book
-            -Dsonar.organization=andreyaraujo
-            -Dsonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
+          path: ~\sonar\cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarQube Cloud scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v4
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+      - name: Install SonarQube Cloud scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: powershell
+        run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        shell: powershell
+        run: |
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"andreyaraujo-dev_my-recipe-book" /o:"andreyaraujo" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          dotnet build
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
