--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -12,10 +12,11 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # Checkout do código
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
+      # Checkout do repositório
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+    
       # Configuração do .NET Core
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
@@ -36,6 +37,10 @@ jobs:
           dotnet test --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./test-results
         shell: pwsh
 
+      - name: List test result files
+        run: dir ./test-results /s
+        shell: cmd
+
       - name: Install ReportGenerator
         run: dotnet tool install -g dotnet-reportgenerator-globaltool
         shell: pwsh
@@ -45,27 +50,19 @@ jobs:
           reportgenerator -reports:./test-results/**/coverage.cobertura.xml -targetdir:./test-results/coverage -reporttypes:opencover
         shell: pwsh
 
-      # Salvar os artefatos para análise no SonarCloud
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: ./test-results
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'zulu' # Alternative distribution options are available.
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+     
       - name: Cache SonarQube Cloud packages
         uses: actions/cache@v4
         with:
           path: ~\sonar\cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
+     
       - name: Cache SonarQube Cloud scanner
         id: cache-sonar-scanner
         uses: actions/cache@v4
@@ -73,12 +70,14 @@ jobs:
           path: .\.sonar\scanner
           key: ${{ runner.os }}-sonar-scanner
           restore-keys: ${{ runner.os }}-sonar-scanner
+     
       - name: Install SonarQube Cloud scanner
         if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
         shell: powershell
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+     
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
