--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -38,7 +38,7 @@ jobs:
         shell: pwsh
 
       - name: List test result files
-        run: dir ./test-results /s
+        run: dir .\test-results\* /s
         shell: cmd
 
       - name: Install ReportGenerator
