--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Convert coverage to OpenCover format
         run: |
-          reportgenerator -reports:./test-results/**/coverage.opencover.xml -targetdir:./test-results/coverage -reporttypes:opencover
+          reportgenerator -reports:./test-results/**/coverage.cobertura.xml -targetdir:./test-results/coverage -reporttypes:cobertura
         shell: pwsh
 
       - name: Set up JDK 17
@@ -83,6 +83,6 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"andreyaraujo-dev_my-recipe-book" /o:"andreyaraujo" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=./test-results/**/coverage.opencover.xml
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"andreyaraujo-dev_my-recipe-book" /o:"andreyaraujo" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=./test-results/**/coverage.cobertura.xml
           dotnet build
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
