--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -40,6 +40,12 @@ jobs:
       - name: List test result files
         run: dir .\test-results\* /s
         shell: cmd
+      - name: List root files
+        run: dir .\* /s
+        shell: cmd
+      - name: List test files
+        run: dir .\tests\UseCases.Test\* /s
+        shell: cmd
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
