--- a/tests/WebApi.Test/WebApi.Test.csproj
+++ b/tests/WebApi.Test/WebApi.Test.csproj
@@ -11,6 +11,10 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="coverlet.msbuild" Version="6.0.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="FluentAssertions" Version="8.0.0-rc.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.11" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.11" />
